--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tester</title>
+    <title>Test Bennett</title>
   </head>
-  <body ng-app="tester">
+  <body ng-app="testbennett">
 
     <div class="jumbotron">
       <div class="container" ui-view>
